[gd_scene load_steps=28 format=3 uid="uid://6gvmhfitnvrx"]

[ext_resource type="Script" path="res://source/session.gd" id="1_6xklu"]
[ext_resource type="Script" path="res://source/round_panel.gd" id="2_a3y4d"]
[ext_resource type="PackedScene" uid="uid://dggea2iolinwy" path="res://source/ui.tscn" id="2_j6nml"]
[ext_resource type="Shader" path="res://resources/background_shader.gdshader" id="2_y2kwk"]
[ext_resource type="Script" path="res://source/cursor.gd" id="5_ucfb2"]
[ext_resource type="Script" path="res://source/base.gd" id="5_ye3dh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rjw8f"]
shader = ExtResource("2_y2kwk")
shader_parameter/top_left = Color(0.968627, 0, 0, 1)
shader_parameter/top_right = Color(0, 0.964706, 0, 1)
shader_parameter/bottom_left = Color(0, 0, 0.972549, 1)
shader_parameter/bottom_right = Color(0.488092, 0.481535, 0.596078, 1)
shader_parameter/speed = 2.5
shader_parameter/amplitude = 0.1

[sub_resource type="Gradient" id="Gradient_grd2o"]
offsets = PackedFloat32Array(0, 0.851528, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.560784, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ext1t"]
gradient = SubResource("Gradient_grd2o")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n6hij"]
texture = SubResource("GradientTexture2D_ext1t")

[sub_resource type="Gradient" id="Gradient_8w3u5"]
offsets = PackedFloat32Array(0.930131, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l7eas"]
gradient = SubResource("Gradient_8w3u5")
fill = 1
fill_from = Vector2(0.5, 0.9)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vp4r4"]
texture = SubResource("GradientTexture2D_l7eas")

[sub_resource type="Gradient" id="Gradient_6hik4"]
offsets = PackedFloat32Array(0.930131, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8scck"]
gradient = SubResource("Gradient_6hik4")
fill = 1
fill_from = Vector2(0.5, 0.1)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wop26"]
texture = SubResource("GradientTexture2D_8scck")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fq3j"]
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
corner_radius_top_left = 291
corner_radius_top_right = 291
corner_radius_bottom_right = 291
corner_radius_bottom_left = 291
corner_detail = 20

[sub_resource type="Gradient" id="Gradient_c0cvt"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xbiie"]
gradient = SubResource("Gradient_c0cvt")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_so8bx"]
texture = SubResource("GradientTexture2D_xbiie")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6llqp"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 99
corner_radius_top_right = 99
corner_radius_bottom_right = 99
corner_radius_bottom_left = 99
corner_detail = 16

[sub_resource type="CircleShape2D" id="CircleShape2D_g5q8n"]
radius = 16.0

[sub_resource type="Gradient" id="Gradient_elb2m"]
offsets = PackedFloat32Array(0, 0.786026, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.2, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u1u0q"]
gradient = SubResource("Gradient_elb2m")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sfw21"]
texture = SubResource("GradientTexture2D_u1u0q")
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ol5ey"]
radius = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hq016"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 19
corner_radius_top_right = 19
corner_radius_bottom_right = 19
corner_radius_bottom_left = 19
shadow_color = Color(1, 1, 1, 0.454902)
shadow_size = 4

[node name="SessionContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xklu")

[node name="UIRef" parent="." node_paths=PackedStringArray("session") instance=ExtResource("2_j6nml")]
unique_name_in_owner = true
visible = false
session = NodePath("..")

[node name="TimerSpawnCooldown" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[node name="TimerBlinkCooldown" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[node name="ColorBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorShader" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -1
material = SubResource("ShaderMaterial_rjw8f")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
color = Color(0, 0, 0, 1)

[node name="PanelVignetteBackground" type="PanelContainer" parent="ColorShader"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n6hij")

[node name="PanelVignetteForegroundTop" type="PanelContainer" parent="ColorShader"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vp4r4")

[node name="PanelVignetteForegroundBottom" type="PanelContainer" parent="ColorShader"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wop26")

[node name="MarginBackground" type="MarginContainer" parent="."]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="AspectBackground" type="AspectRatioContainer" parent="MarginBackground"]
unique_name_in_owner = true
layout_mode = 2

[node name="RoundPanelOuter" type="PanelContainer" parent="MarginBackground/AspectBackground"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.0823529)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6fq3j")
script = ExtResource("2_a3y4d")
style = SubResource("StyleBoxFlat_6fq3j")
border_width_all = 20

[node name="PanelGradient" type="PanelContainer" parent="MarginBackground/AspectBackground/RoundPanelOuter"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.556863)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_so8bx")

[node name="RoundPanelInner" type="PanelContainer" parent="MarginBackground/AspectBackground/RoundPanelOuter"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_6llqp")
script = ExtResource("2_a3y4d")
style = SubResource("StyleBoxFlat_6llqp")
border_width_all = 5

[node name="AreaBase" type="Area2D" parent="MarginBackground/AspectBackground/RoundPanelOuter/RoundPanelInner"]
unique_name_in_owner = true
script = ExtResource("5_ye3dh")

[node name="CollisionContainerBase" type="CollisionShape2D" parent="MarginBackground/AspectBackground/RoundPanelOuter/RoundPanelInner/AreaBase"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_g5q8n")

[node name="PanelBase" type="PanelContainer" parent="MarginBackground/AspectBackground/RoundPanelOuter/RoundPanelInner/AreaBase"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxTexture_sfw21")

[node name="AreaCursor" type="Area2D" parent="MarginBackground/AspectBackground/RoundPanelOuter/RoundPanelInner"]
unique_name_in_owner = true
script = ExtResource("5_ucfb2")

[node name="CollisionContainerCursor" type="CollisionShape2D" parent="MarginBackground/AspectBackground/RoundPanelOuter/RoundPanelInner/AreaCursor"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_ol5ey")

[node name="RoundPanelCursor" type="PanelContainer" parent="MarginBackground/AspectBackground/RoundPanelOuter/RoundPanelInner/AreaCursor"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hq016")
script = ExtResource("2_a3y4d")
style = SubResource("StyleBoxFlat_hq016")

[node name="EnemyContainer" type="Node2D" parent="."]
unique_name_in_owner = true
